[project]
name = "toronto-streetview-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Olson", email = "alex.olson@utoronto.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
]

[project.scripts]
toronto-streetview-count = "toronto_streetview_count:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
